remove ua-parser

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </script>
     <noscript><img src="https://vk.com/rtrg?p=VK-RTRG-1221641-8p0sZ" style="position: fixed; left: -999px" alt="" /></noscript>
     <!-- / VK Pixel  -->
-    <script src="https://storage.yandexcloud.net/skypro-storage/tilda/js/ua-parser.v1.0.34.min.js"></script>
+<!--    <script src="https://storage.yandexcloud.net/skypro-storage/tilda/js/ua-parser.v1.0.34.min.js"></script>-->
     <script>
       ;(function (w) {
         if (w.UAParser) {
