optimize render blocking

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on" />
     <link rel="dns-prefetch" href="https://ws.tildacdn.com" />
+    <link rel="dns-prefetch" href="https://static.tildacdn.com" />
+    <link rel="dns-prefetch" href="https://neo.tildacdn.com" />
     <meta name="robots" content="noindex,nofollow" />
     <link rel="icon" type="image/x-icon" sizes="32x32" href="images/tild3366-3237-4434-a266-326662373538__favicon_1.ico" media="(prefers-color-scheme: light)" />
     <link rel="icon" type="image/x-icon" sizes="32x32" href="images/tild6433-3437-4131-a266-656130343835__logo.svg" media="(prefers-color-scheme: dark)" />
@@ -25,13 +27,16 @@
     <link rel="icon" type="image/png" sizes="192x192" href="images/tild3363-3665-4239-a236-663638363363__logo.png" />
     <!-- Assets -->
     <script src="https://neo.tildacdn.com/js/tilda-fallback-1.0.min.js" async charset="utf-8"></script>
-    <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
-    <link rel="stylesheet" href="css/tilda-blocks-page66655955.min.css?t=1748260013" type="text/css" media="all" onerror="this.loaderr='y';" />
-    <link rel="stylesheet" href="css/tilda-animation-2.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
+<!--    <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />-->
+<!--    <link rel="stylesheet" href="css/tilda-blocks-page66655955.min.css?t=1748260013" type="text/css" media="all" onerror="this.loaderr='y';" />-->
+<!--    <link rel="stylesheet" href="css/tilda-animation-2.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />-->
+
     <link rel="stylesheet" href="css/tilda-popup-1.1.min.css" type="text/css" media="print" onload="this.media='all';" onerror="this.loaderr='y';" />
-    <noscript><link rel="stylesheet" href="css/tilda-popup-1.1.min.css" type="text/css" media="all" /></noscript>
-    <link rel="stylesheet" href="css/tilda-cards-1.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
-    <link rel="stylesheet" href="css/tilda-forms-1.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />
+
+<!--    <noscript><link rel="stylesheet" href="css/tilda-popup-1.1.min.css" type="text/css" media="all" /></noscript>-->
+<!--    <link rel="stylesheet" href="css/tilda-cards-1.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />-->
+<!--    <link rel="stylesheet" href="css/tilda-forms-1.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';" />-->
     <script nomodule src="js/tilda-polyfill-1.0.min.js" charset="utf-8"></script>
     <script type="text/javascript">
       function t_onReady(func) {
