--- a/index.html
+++ b/index.html
@@ -26251,7 +26251,7 @@ ${getTextUserAnswers()}
           }
 
           // Использование
-          loadHTMLSequentially('/page2.html', '#allrecords');
+          loadHTMLSequentially('./page2.html', '#allrecords');
       </script>
 
       <!--footer-->
